# Process-Audio-Recorder

./: .gitattributes  .gitignore  CMakeLists.txt  PROJECT_WIKI.md  README.md  README_ORIGINAL.md
docs/: PROJECT_WIKI.md  slash-commands-guide.md
docs/superpowers/plans/: 2026-07-18-engine-phase1.md  2026-07-18-gui-phase2.md  2026-07-20-noise-gate-filesize-fix.md
docs/superpowers/specs/: 2026-07-17-process-recorder-app-design.md  2026-07-18-gui-phase2-spec.md  2026-07-20-auto-select-history.md  2026-07-20-noise-gate-filesize-fix.md  2026-07-20-noise-gate-subfolder.md  2026-07-20-session-monitor-dedup-silence.md  2026-07-20-wechat-auto-record.md
source/: AudioMixer.cpp  AudioMixer.h  AudioSessionLister.cpp  AudioSessionLister.h  AudioSink.h  CaptureEngine.cpp  CaptureEngine.h  Common.h  LevelMeter.h  Logger.cpp  Logger.h  LoopbackCapture.cpp  LoopbackCapture.h  M4aSink.cpp  M4aSink.h  MicCapture.cpp  MicCapture.h  ProcessAudioRecorder.cpp  WavSink.cpp  WavSink.h  resource.h
source/GUI/: Main.cpp  MainWindow.cpp  MainWindow.h  SessionList.cpp  SessionList.h  SettingsDialog.cpp  SettingsDialog.h  version.rc
tools/: M4aToAac.cpp  convert_m4a_to_aac.py  dump_windows.cpp  dump_windows.txt  gen_icon.py
